--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -3,14 +3,9 @@
   <div class="information" (click)="switchCredentials()">
     <b>{{session.account.accountName}}</b> - {{ sessionDetailToShow }}
   </div>
-  <div class="information-profile" (click)="switchCredentials()">
-    <ng-container *ngIf="session.account.type !== eAccountType.AZURE">
-      <i class="fa fa-{{getProfileIcon(session.active, session.profile)}}"></i>&nbsp;&nbsp;{{getProfileName(session.profile)}}
-    </ng-container>
-  </div>
   <div class="information-offset" (click)="switchCredentials()">
-    <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!(session.loading && (session.account.type === eAccountType.AWS_SSO))"></i>
-    <i class="status-item far fa-spinner-third fa-spin" *ngIf="session.loading && (session.account.type === eAccountType.AWS_SSO)"></i>
+    <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!session.loading"></i>
+    <i class="status-item far fa-spinner-third fa-spin" *ngIf="session.loading"></i>
   </div>
 
   <ng-container dropdown placement="right" [autoClose]="true">
@@ -18,27 +13,23 @@
       <i class="fa fa-ellipsis-v"></i>
     </a>
     <div id="drop-list" *dropdownMenu class="dropdown-menu drop-list dropdown-menu-right" role="menu" aria-labelledby="button-basic">
-      <a (click)="ssmModalOpen(session);" *ngIf="(session.account.type === eAccountType.AWS || session.account.type === eAccountType.AWS_PLAIN_USER || session.account.type === eAccountType.AWS_SSO) && session.active">SSM session</a>
-      <a (click)="changeRegionModalOpen(session);">Change {{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}</a>
-
-      <a *ngIf="session.account.type !== eAccountType.AZURE" (click)="changeProfileModalOpen();">Change Profile</a>
-
+      <a (click)="ssmModalOpen(session, $event);" *ngIf="(session.account.type === eAccountType.AWS || session.account.type === eAccountType.AWS_PLAIN_USER || session.account.type === eAccountType.AWS_SSO) && session.active">SSM session</a>
+      <a (click)="changeRegionModalOpen(session, $event);">Change {{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}</a>
       <a *ngIf="session.account.type === eAccountType.AWS_PLAIN_USER && !session.active" (click)="editAccount(session, $event);">Edit account</a>
       <a (click)="removeAccount(session, $event);">Remove account</a>
       <ng-container *ngIf="(session.account.type === eAccountType.AWS || session.account.type === eAccountType.AWS_PLAIN_USER || session.account.type === eAccountType.AWS_SSO)">
       <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
-        <ng-container *ngIf="(session.account.type !== eAccountType.AWS_PLAIN_USER)">
-        <a (click)="copyCredentials(session, 2, $event);">Copy Role ARN</a>
-      </ng-container>
+      <a (click)="copyCredentials(session, 2, $event);">Copy Role ARN</a>
       </ng-container>
     </div>
   </ng-container>
 
 </div>
 
+
 <ng-template #ssmModalTemplate>
   <div class="modal-header">
-    <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
+    <button type="button" class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></button>
     <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>SSM</b>
   </div>
   <div class="modal-body">
@@ -46,12 +37,11 @@
     <div class="ssm-tray">
 
       <b class="">Select a region:</b>
-      <ng-select bindLabel="region" bindValue="region" [items]="awsRegions" [(ngModel)]="selectedSsmRegion" placeholder="Select a Region for finding instances" (change)="changeSsmRegion($event, session);"></ng-select>
+      <ng-select bindLabel="region" bindValue="region" [items]="awsRegions" [(ngModel)]="selectedSsmRegion" placeholder="Select a Region for finding instances" (change)="changeSsmRegion($event);"></ng-select>
 
       <div class="loader" *ngIf="ssmloading"><i class="fa fa-spinner fa-spin"></i></div>
       <div class="list-of-ssm" *ngIf="!ssmloading && instances.length > 0">
-        <b>Select an Instance:</b><br>
-        <input class="form-control" type="text" placeholder="search by..." (keyup)="searchSSMInstance($event)" />
+        <b>Select an Instance:</b>
         <ul class="ssm-ul">
           <li *ngFor="let instance of instances" class="ssm-card">
             <div>
@@ -71,7 +61,7 @@
 
 <ng-template #defaultRegionModalTemplate>
   <div class="modal-header">
-    <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
+    <button type="button" class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></button>
     <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>Change {{session.account.type === eAccountType.AZURE ? 'Location' : 'Region'}}</b>
   </div>
   <div class="modal-body">
@@ -79,32 +69,8 @@
     <div class="ssm-tray">
 
       <b class="">Select a default region for the session:</b>
-      <ng-select bindLabel="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" bindValue="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" [items]="regionOrLocations" [(ngModel)]="selectedDefaultRegion" placeholder="{{placeholder}}"></ng-select>
+      <ng-select bindLabel="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" bindValue="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" [items]="regionOrLocations" [(ngModel)]="selectedDefaultRegion" placeholder="{{placeholder}}" (change)="changeDefaultRegion($event);"></ng-select>
 
-      <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
-      <button type="button" (click)="changeRegion();" [disabled]="!selectedDefaultRegion" [ngClass]="(!selectedDefaultRegion) ? 'pull-right disabled': 'pull-right'">Save</button>
-    </div>
-  </div>
-</ng-template>
-
-<ng-template #defaultProfileModalTemplate>
-  <div class="modal-header">
-    <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
-    <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>Change Profile</b>
-  </div>
-  <div class="modal-body">
-
-    <div class="ssm-tray">
-
-      <b class="">Select a profile for the session:</b>
-      <ng-select bindLabel="name"
-                 [addTag]="addNewProfile"
-                 [items]="profiles"
-                 [(ngModel)]="selectedProfile"
-                 placeholder="select a profile"></ng-select>
-
-      <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
-      <button type="button" (click)="changeProfile();" [disabled]="!selectedProfile" [ngClass]="(!selectedProfile) ? 'pull-right disabled': 'pull-right'">Save</button>
     </div>
   </div>
 </ng-template>
