--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -19,7 +19,7 @@
 
     <a (click)="createAccount();" tooltip="Create Account" class="small-btn"><i class="far fa-plus"></i></a>
     <span class="search-bar">
-      <input #filterField type="text" (keyup)="filterSessions($any($event.target).value)" placeholder="Search by..."/>
+      <input type="text" (keyup)="filterSessions($any($event.target).value)" placeholder="Search by..."/>
       <i class="far fa-search"></i>
     </span>
   </div>
@@ -28,14 +28,14 @@
 <div class="container-fluid with-scroll">
 
   <ul class="account-cards">
-    <li style="position:relative;"> <span class="fixed-profiles">AWS Profiles</span><span class="fixed-status">Status</span></li>
+    <li style="position:relative;"> <span class="fixed-status">Status</span></li>
     <li *ngIf="activeSessions.length !== 0">
       <h3 class="mb-session">Active Accounts</h3>
     </li>
 
     <ng-container *ngFor="let session of activeSessions">
       <li *ngIf="(showOnly === 'ALL') || ($any(session.account).subscriptionId ? showOnly === 'AZR' : showOnly === 'AWS')">
-        <app-session-card [session]="session"></app-session-card>
+        <app-session-card [session]="session" (sessionsChanged)='getSessions()'></app-session-card>
       </li>
     </ng-container>
 
@@ -45,7 +45,7 @@
 
     <ng-container *ngFor="let session of notActiveSessions">
       <li *ngIf="(showOnly === 'ALL') || ($any(session.account).subscriptionId ? showOnly === 'AZR' : showOnly === 'AWS')">
-        <app-session-card [session]="session"></app-session-card>
+        <app-session-card [session]="session" (sessionsChanged)='getSessions()'></app-session-card>
       </li>
     </ng-container>
   </ul>
