--- a/src/app/shared/integrations-page/integrations-page.component.html
+++ b/src/app/shared/integrations-page/integrations-page.component.html
@@ -21,7 +21,7 @@
       <div class="form-group" style="width: 100%; display: inline-block;">
         <label><strong>Identity Providers</strong></label>
         <br>
-        <span class="form-control blue-control btn-control" (click)="goToAwsSSO()">AWS Single Sign On</span>
+        <span class="form-control blue-control btn-control" (click)="goToAwsSSO()">aws Single Sign On</span>
       </div>
 
     </ng-container>
