--- a/src/app/integrations/components/aws-sso/aws-sso.component.html
+++ b/src/app/integrations/components/aws-sso/aws-sso.component.html
@@ -9,32 +9,32 @@
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label><strong>Identity Provider</strong></label>
           <br>
-          <input  type="text" class="form-control blue-control btn-control" placeholder="AWS Single Sign On" value="AWS Single Sign On" readonly>
+          <input  type="text" class="form-control blue-control btn-control" placeholder="aws Single Sign On" value="aws Single Sign On" readonly>
         </div>
 
         <ng-container *ngIf="!isAwsSsoActive">
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label><strong>AWS SSO Url</strong><span class="danger-text">*</span></label>
+          <label><strong>aws SSO Url</strong><span class="danger-text">*</span></label>
           <br>
-          <input formControlName="portalUrl" type="url" class="form-control" placeholder="AWS SSO url *">
-          <small class="text-error" *ngIf="(form.controls['portalUrl'].dirty || form.controls['portalUrl'].touched) && form.controls['portalUrl'].errors">Insert the AWS SSO url</small>
+          <input formControlName="portalUrl" type="url" class="form-control" placeholder="aws SSO url *">
+          <small class="text-error" *ngIf="(form.controls['portalUrl'].dirty || form.controls['portalUrl'].touched) && form.controls['portalUrl'].errors">Insert the aws SSO url</small>
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label><strong>AWS Region</strong></label>
+          <label><strong>aws Region</strong></label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
         </div>
         </ng-container>
 
         <ng-container *ngIf="isAwsSsoActive">
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>AWS SSO Url</strong></label>
+            <label><strong>aws SSO Url</strong></label>
             <br>
             <span class="form-control blue-control">{{portalUrl}}</span>
          </div>
 
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>AWS Region</strong></label>
+            <label><strong>aws Region</strong></label>
             <br>
             <span class="form-control blue-control">{{selectedRegion}}</span>
           </div>
@@ -44,11 +44,11 @@
     </div>
 
     <ng-container *ngIf="!isAwsSsoActive">
-      <button class="button pull-center" (click)="login()">AWS SSO</button>
+      <button class="button pull-center" (click)="login()">aws SSO</button>
     </ng-container>
 
     <ng-container *ngIf="isAwsSsoActive">
-      <button class="button pull-left disabled" (click)="logout()">AWS SSO LOGOUT</button>
+      <button class="button pull-left disabled" (click)="logout()">aws SSO LOGOUT</button>
       <button class="button pull-right" (click)="forceSync()"> SYNC SESSIONS</button>
     </ng-container>
 
