--- a/src/app/managing/edit-account/edit-account.component.html
+++ b/src/app/managing/edit-account/edit-account.component.html
@@ -18,7 +18,7 @@
 
       <ng-container>
         <!-- ============================ -->
-        <!-- AWS PLAIN ACCOUNT PROPERTIES -->
+        <!-- aws PLAIN ACCOUNT PROPERTIES -->
         <!-- ============================ -->
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label>Account Alias<span class="danger-text">*</span></label>
@@ -36,7 +36,7 @@
         <div class="form-group" style="width: 2%; display: inline-block;"></div>
 
         <div class="form-group" style="width: 49%; display: inline-block;">
-          <label>AWS Region</label>
+          <label>aws Region</label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
         </div>
 
