--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -126,30 +126,20 @@
       <!-- ====================== -->
       <ng-container *ngIf="sessionType !== eAccountType.azure">
         <!-- ================================================================== -->
-        <!-- ==                   ACCOUNT NUMBER FEDERATED                   == -->
-        <!-- ================================================================== -->
-        <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="sessionType === eAccountType.awsFederated">
-          <label>Account Number<span class="danger-text">*</span></label>
-          <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
-          <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
-        </div>
-        <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="sessionType === eAccountType.awsFederated"></div>
-
-        <!-- ================================================================== -->
-        <!-- ==                       ROLE ARN TRUSTER                       == -->
-        <!-- ================================================================== -->
-        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eAccountType.awsTruster">
-          <label>RoleArn<span class="danger-text">*</span></label>
-          <input formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
-          <small class="text-error" *ngIf="(form.controls['roleArn'].dirty || form.controls['roleArn'].touched) && form.controls['roleArn'].errors">Insert the Role ARN</small>
-        </div>
-
-        <!-- ================================================================== -->
         <!-- ==                        AWS REGION ALL                        == -->
         <!-- ================================================================== -->
         <div class="form-group" [ngStyle]="{display: 'inline-block', width: sessionType === eAccountType.awsFederated ? '49%': '100%'}">
           <label>aws Region</label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
+        </div>
+
+        <!-- ================================================================== -->
+        <!-- ==                 ROLE ARN FEDERATED & TRUSTER                 == -->
+        <!-- ================================================================== -->
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eAccountType.awsFederated || sessionType === eAccountType.awsTruster">
+          <label>RoleArn<span class="danger-text">*</span></label>
+          <input formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
+          <small class="text-error" *ngIf="(form.controls['roleArn'].dirty || form.controls['roleArn'].touched) && form.controls['roleArn'].errors">Insert the Role ARN</small>
         </div>
 
         <!-- ================================================================== -->
