--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -1,11 +1,11 @@
 <div class="session-card button-area  {{session.account.type === eSessionType.azure ? 'azr' : 'aws'}} {{session.status === eSessionStatus.active ? 'active' : ''}}">
   <span class="region-label {{session.account.type === eSessionType.azure ? 'azr' : 'aws'}}">{{session.account.region}}</span>
   <div class="information" (click)="switchCredentials()">
-    <b>{{session.account.accountName}}</b> - {{ sessionDetailToShow }}
+    <b>{{session.account.accountName}}</b> - {{ session | detail }}
   </div>
   <div class="information-profile" (click)="switchCredentials()">
     <ng-container *ngIf="session.account.type !== eSessionType.azure">
-      <i class="fa fa-{{getProfileIcon(session.status === eSessionStatus.active, getProfileName(getProfileId(session)))}}"></i>&nbsp;&nbsp;{{getProfileName(getProfileId(session))}}
+      <i class="fa fa-{{session | icon: getProfileName(getProfileId(session))}}"></i>&nbsp;&nbsp;{{getProfileName(getProfileId(session))}}
     </ng-container>
   </div>
   <div class="information-offset" (click)="switchCredentials()">
@@ -23,8 +23,8 @@
 
       <a *ngIf="session.account.type !== eSessionType.azure" (click)="changeProfileModalOpen();">Change Profile</a>
 
-      <a *ngIf="session.account.type === eSessionType.awsPlain && session.status !== eSessionStatus.active" (click)="editAccount(session, $event);">Edit account</a>
-      <a (click)="removeAccount(session, $event);">Remove account</a>
+      <a *ngIf="session.account.type === eSessionType.awsPlain && session.status !== eSessionStatus.active" (click)="editSession(session, $event);">Edit account</a>
+      <a (click)="deleteSession(session, $event);">Remove account</a>
       <ng-container *ngIf="(session.account.type === eSessionType.awsFederated || session.account.type === eSessionType.awsPlain || session.account.type === eSessionType.awsSso)">
       <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
         <ng-container *ngIf="(session.account.type !== eSessionType.awsPlain)">
@@ -48,8 +48,8 @@
       <b class="">Select a region:</b>
       <ng-select bindLabel="region" bindValue="region" [items]="awsRegions" [(ngModel)]="selectedSsmRegion" placeholder="Select a Region for finding instances" (change)="changeSsmRegion($event, session);"></ng-select>
 
-      <div class="loader" *ngIf="ssmloading"><i class="fa fa-spinner fa-spin"></i></div>
-      <div class="list-of-ssm" *ngIf="!ssmloading && instances.length > 0">
+      <div class="loader" *ngIf="ssmLoading"><i class="fa fa-spinner fa-spin"></i></div>
+      <div class="list-of-ssm" *ngIf="!ssmLoading && instances.length > 0">
         <b>Select an Instance:</b><br>
         <input class="form-control" type="text" placeholder="search by..." (keyup)="searchSSMInstance($event)" />
         <ul class="ssm-ul">
